--- a/transportlube/index.html
+++ b/transportlube/index.html
@@ -1127,11 +1127,11 @@
 	<!-- end footer -->
 
 	<!-- loading############################## -->
-    <div class="loading-overlay">
+<!--     <div class="loading-overlay">
         <div class="load">
             <img src="images/logo.png">
         </div>
-    </div>
+    </div> -->
    	
 	<!--############## javascript ###############-->
 	<script src="js/jquery-1.12.0.min .js"></script>
