--- a/saja/index.html
+++ b/saja/index.html
@@ -618,12 +618,12 @@
     <div class="overlay"></div>
 
     <!-- loading############################## -->
-    <div class="loading-overlay">
+<!--     <div class="loading-overlay">
         <div class="load">
             <img class="load-logo-1" src="images/logo.png">
         </div>
     </div>
-
+ -->
 
 
     <!--############## javascript ###############-->
